<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.login.LoginFragment">

    <RelativeLayout
        android:id="@+id/section_top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="16dp"
        android:background="@color/blue_3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.37">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:src="@drawable/img_logo"
            android:layout_centerInParent="true"
            android:contentDescription="@string/__login__LoginImage"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/title_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/__login__Welcome"
        android:textSize="28sp"
        android:textFontWeight="@integer/material_motion_duration_long_2"
        android:fontFamily="@font/amazon_ember_display_md"
        android:textColor="@android:color/black"
        android:layout_marginTop="26dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/section_top"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/input_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/__login__Email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/cmp_rounded_input"
        android:padding="12dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/dark_3"
        app:layout_constraintTop_toBottomOf="@id/title_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/__login__LoginBtn"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/cmp_rounded_button"
        app:layout_constraintTop_toBottomOf="@id/input_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/__login__Register"
        android:textColor="@color/blue_4"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>