<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.main.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/__home__DeliveryTour"
            android:textSize="18sp"
            android:textColor="@color/dark_5"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/btn_logout"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/__home__LogoutIcon"
            android:src="@drawable/ic_logout"
            android:padding="3dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_colis"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="16dp"
        android:paddingBottom="0dp"
        android:clipToPadding="false"
        android:overScrollMode="never"
        app:layout_constraintTop_toBottomOf="@id/toolbar_container"
        app:layout_constraintBottom_toTopOf="@id/button_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_package" />

    <ImageButton
        android:id="@+id/btn_add"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/cmp_round_button"
        android:src="@drawable/ic_add_white"
        android:contentDescription="@string/__home__AddIcon"
        android:elevation="0dp"
        android:stateListAnimator="@null"
        android:padding="10dp"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toTopOf="@id/button_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btn_itineraire"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:textSize="12sp"
            android:text="@string/__home__Tour"
            android:layout_marginHorizontal="8dp"
            android:background="@drawable/cmp_rounded_button"
            android:elevation="0dp"
            android:stateListAnimator="@null"/>

        <Button
            android:id="@+id/btn_delivery"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:textSize="12sp"
            android:text="@string/__home__Start"
            android:layout_marginHorizontal="8dp"
            android:background="@drawable/cmp_rounded_button"
            android:elevation="0dp"
            android:stateListAnimator="@null"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>