<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.delivery.ListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/btn_back_fraglist"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_back"
                android:padding="4dp"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/__list__Tour"
                android:textSize="18sp"
                android:textColor="@color/dark_5"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/filter_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="7dp"
            android:background="@drawable/cmp_rounded_bg"
            app:layout_constraintTop_toBottomOf="@id/toolbar_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/filter_all"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/__list__CategoryAll"
                android:textSize="14sp"
                android:padding="4dp"
                android:layout_marginHorizontal="1dp"
                android:textColor="@color/dark_5"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/filter_in_progress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/__list__CategoryInProgress"
                android:textSize="14sp"
                android:padding="4dp"
                android:layout_marginHorizontal="1dp"
                android:textColor="@color/dark_5"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/filter_delivered"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/__list__CategoryDelivered"
                android:textSize="14sp"
                android:padding="4dp"
                android:layout_marginHorizontal="1dp"
                android:textColor="@color/dark_5"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/filter_not_delivered"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/__list__CategoryMissing"
                android:textSize="14sp"
                android:padding="4dp"
                android:layout_marginHorizontal="1dp"
                android:textColor="@color/dark_5"
                android:textStyle="bold"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/filter_container"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <LinearLayout
            android:id="@+id/button_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:id="@+id/btn_end"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:textSize="12sp"
                android:text="@string/__list__EndTour"
                android:layout_marginHorizontal="8dp"
                android:background="@drawable/cmp_rounded_button"
                android:elevation="0dp"
                android:stateListAnimator="@null"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>